parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> sexpr_list
Rule 1     sexpr_list -> sexpr
Rule 2     sexpr_list -> sexpr_list sexpr
Rule 3     sexpr -> LPAREN ID param_list RPAREN
Rule 4     sexpr -> define_expr
Rule 5     define_expr -> LPAREN DEFINE ID param_list LPAREN sexpr_list RPAREN RPAREN
Rule 6     param_list -> param
Rule 7     param_list -> param_list param
Rule 8     param -> LPAREN ID NUMBER RPAREN

Terminals, with rules where they appear

DEFINE               : 5
ID                   : 3 5 8
LPAREN               : 3 5 5 8
NUMBER               : 8
RPAREN               : 3 5 5 8
error                : 

Nonterminals, with rules where they appear

define_expr          : 4
param                : 6 7
param_list           : 3 5 7
sexpr                : 1 2
sexpr_list           : 2 5 0

Parsing method: LALR

state 0

    (0) S' -> . sexpr_list
    (1) sexpr_list -> . sexpr
    (2) sexpr_list -> . sexpr_list sexpr
    (3) sexpr -> . LPAREN ID param_list RPAREN
    (4) sexpr -> . define_expr
    (5) define_expr -> . LPAREN DEFINE ID param_list LPAREN sexpr_list RPAREN RPAREN

    LPAREN          shift and go to state 3

    sexpr_list                     shift and go to state 1
    sexpr                          shift and go to state 2
    define_expr                    shift and go to state 4

state 1

    (0) S' -> sexpr_list .
    (2) sexpr_list -> sexpr_list . sexpr
    (3) sexpr -> . LPAREN ID param_list RPAREN
    (4) sexpr -> . define_expr
    (5) define_expr -> . LPAREN DEFINE ID param_list LPAREN sexpr_list RPAREN RPAREN

    LPAREN          shift and go to state 3

    sexpr                          shift and go to state 5
    define_expr                    shift and go to state 4

state 2

    (1) sexpr_list -> sexpr .

    LPAREN          reduce using rule 1 (sexpr_list -> sexpr .)
    $end            reduce using rule 1 (sexpr_list -> sexpr .)
    RPAREN          reduce using rule 1 (sexpr_list -> sexpr .)


state 3

    (3) sexpr -> LPAREN . ID param_list RPAREN
    (5) define_expr -> LPAREN . DEFINE ID param_list LPAREN sexpr_list RPAREN RPAREN

    ID              shift and go to state 6
    DEFINE          shift and go to state 7


state 4

    (4) sexpr -> define_expr .

    LPAREN          reduce using rule 4 (sexpr -> define_expr .)
    $end            reduce using rule 4 (sexpr -> define_expr .)
    RPAREN          reduce using rule 4 (sexpr -> define_expr .)


state 5

    (2) sexpr_list -> sexpr_list sexpr .

    LPAREN          reduce using rule 2 (sexpr_list -> sexpr_list sexpr .)
    $end            reduce using rule 2 (sexpr_list -> sexpr_list sexpr .)
    RPAREN          reduce using rule 2 (sexpr_list -> sexpr_list sexpr .)


state 6

    (3) sexpr -> LPAREN ID . param_list RPAREN
    (6) param_list -> . param
    (7) param_list -> . param_list param
    (8) param -> . LPAREN ID NUMBER RPAREN

    LPAREN          shift and go to state 8

    param_list                     shift and go to state 9
    param                          shift and go to state 10

state 7

    (5) define_expr -> LPAREN DEFINE . ID param_list LPAREN sexpr_list RPAREN RPAREN

    ID              shift and go to state 11


state 8

    (8) param -> LPAREN . ID NUMBER RPAREN

    ID              shift and go to state 12


state 9

    (3) sexpr -> LPAREN ID param_list . RPAREN
    (7) param_list -> param_list . param
    (8) param -> . LPAREN ID NUMBER RPAREN

    RPAREN          shift and go to state 13
    LPAREN          shift and go to state 8

    param                          shift and go to state 14

state 10

    (6) param_list -> param .

    RPAREN          reduce using rule 6 (param_list -> param .)
    LPAREN          reduce using rule 6 (param_list -> param .)


state 11

    (5) define_expr -> LPAREN DEFINE ID . param_list LPAREN sexpr_list RPAREN RPAREN
    (6) param_list -> . param
    (7) param_list -> . param_list param
    (8) param -> . LPAREN ID NUMBER RPAREN

    LPAREN          shift and go to state 8

    param_list                     shift and go to state 15
    param                          shift and go to state 10

state 12

    (8) param -> LPAREN ID . NUMBER RPAREN

    NUMBER          shift and go to state 16


state 13

    (3) sexpr -> LPAREN ID param_list RPAREN .

    LPAREN          reduce using rule 3 (sexpr -> LPAREN ID param_list RPAREN .)
    $end            reduce using rule 3 (sexpr -> LPAREN ID param_list RPAREN .)
    RPAREN          reduce using rule 3 (sexpr -> LPAREN ID param_list RPAREN .)


state 14

    (7) param_list -> param_list param .

    RPAREN          reduce using rule 7 (param_list -> param_list param .)
    LPAREN          reduce using rule 7 (param_list -> param_list param .)


state 15

    (5) define_expr -> LPAREN DEFINE ID param_list . LPAREN sexpr_list RPAREN RPAREN
    (7) param_list -> param_list . param
    (8) param -> . LPAREN ID NUMBER RPAREN

    LPAREN          shift and go to state 17

    param                          shift and go to state 14

state 16

    (8) param -> LPAREN ID NUMBER . RPAREN

    RPAREN          shift and go to state 18


state 17

    (5) define_expr -> LPAREN DEFINE ID param_list LPAREN . sexpr_list RPAREN RPAREN
    (8) param -> LPAREN . ID NUMBER RPAREN
    (1) sexpr_list -> . sexpr
    (2) sexpr_list -> . sexpr_list sexpr
    (3) sexpr -> . LPAREN ID param_list RPAREN
    (4) sexpr -> . define_expr
    (5) define_expr -> . LPAREN DEFINE ID param_list LPAREN sexpr_list RPAREN RPAREN

    ID              shift and go to state 12
    LPAREN          shift and go to state 3

    sexpr_list                     shift and go to state 19
    sexpr                          shift and go to state 2
    define_expr                    shift and go to state 4

state 18

    (8) param -> LPAREN ID NUMBER RPAREN .

    RPAREN          reduce using rule 8 (param -> LPAREN ID NUMBER RPAREN .)
    LPAREN          reduce using rule 8 (param -> LPAREN ID NUMBER RPAREN .)


state 19

    (5) define_expr -> LPAREN DEFINE ID param_list LPAREN sexpr_list . RPAREN RPAREN
    (2) sexpr_list -> sexpr_list . sexpr
    (3) sexpr -> . LPAREN ID param_list RPAREN
    (4) sexpr -> . define_expr
    (5) define_expr -> . LPAREN DEFINE ID param_list LPAREN sexpr_list RPAREN RPAREN

    RPAREN          shift and go to state 20
    LPAREN          shift and go to state 3

    sexpr                          shift and go to state 5
    define_expr                    shift and go to state 4

state 20

    (5) define_expr -> LPAREN DEFINE ID param_list LPAREN sexpr_list RPAREN . RPAREN

    RPAREN          shift and go to state 21


state 21

    (5) define_expr -> LPAREN DEFINE ID param_list LPAREN sexpr_list RPAREN RPAREN .

    LPAREN          reduce using rule 5 (define_expr -> LPAREN DEFINE ID param_list LPAREN sexpr_list RPAREN RPAREN .)
    $end            reduce using rule 5 (define_expr -> LPAREN DEFINE ID param_list LPAREN sexpr_list RPAREN RPAREN .)
    RPAREN          reduce using rule 5 (define_expr -> LPAREN DEFINE ID param_list LPAREN sexpr_list RPAREN RPAREN .)

